--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "commander": "^2.9.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.1.7",
+    "gulp-file": "^0.4.0",
     "gulp-nop": "0.0.3",
     "gulp-sass": "^3.1.0",
     "ora": "^0.3.0",
